@@ -3,24 +3,17 @@ package com.nhl.link.move.runtime.jdbc;
 import com.nhl.link.move.LmRuntimeException;
 import org.apache.cayenne.map.DbAttribute;
 
-import java.sql.Types;
-
 /**
  * This normalizer upcasts byte, short and int values to long type.
  */
-public class BigIntNormalizer extends JdbcNormalizer {
+public class BigIntNormalizer extends JdbcNormalizer<Long> {
 
     public BigIntNormalizer() {
-        super(Types.BIGINT);
+        super(Long.class);
     }
 
     @Override
-    public Object normalize(Object value) {
-        return normalize(value, null);
-    }
-
-    @Override
-    public Object normalize(Object value, DbAttribute targetAttribute) {
+    public Long normalize(Object value, DbAttribute targetAttribute) {
 
         if (value == null) {
             return null;
@@ -28,7 +21,7 @@ public class BigIntNormalizer extends JdbcNormalizer {
 
         switch (value.getClass().getName()) {
             case "java.lang.Long": {
-                return value;
+                return (Long) value;
             }
             case "java.lang.String": {
                 String s = (String) value;
@@ -40,7 +33,7 @@ public class BigIntNormalizer extends JdbcNormalizer {
                 return Long.valueOf(value.toString());
             }
             default: {
-                throw new LmRuntimeException("Value can not be mapped to SQL " + getTypeName() + ": " + value);
+                throw new LmRuntimeException("Value can not be mapped to " + getTypeName() + ": " + value);
             }
         }
     }
