@@ -8,6 +8,8 @@ Release 1.7
 #88 JdbcNormalizer for SQL Integer
 #89 Implement parent access in JsonPath
 #91 Similar decimal values cause db update
+#92 Use target's Java type to normalize sources
+#93 Boolean normalizer (sync integers to booleans without updates)
 
 Release 1.6
 
